Возможность скоролла платьев. Альфа 0.01

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Соалла</title>
     <meta name="author" content="Николай Сорокин">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
@@ -21,12 +22,30 @@
         </section>
         <section class="model">
             <article class="girl">
-                <!--<img src="" class="neck" alt="шея">
-                <img src="" class="chest_belly" alt="Грудь-живот">
-                <img src="" class="legs" alt="Ноги">-->
+                <article class="swiper-container" style="margin-top: 74px;">
+                    <div class="swiper-wrapper">
+                        <img src="./image/neck-0.png" class="neck swiper-slide" alt="шея">
+                        <img src="./image/neck-1.png" class="neck swiper-slide" alt="шея">
+                        <img src="./image/neck-2.png" class="neck swiper-slide" alt="шея">
+                    </div>
+                </article>
+                <article class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <img src="./image/chest_belly-0.png" class="chest_belly swiper-slide" alt="шея">
+                        <img src="./image/chest_belly-1.png" class="chest_belly swiper-slide" alt="шея">
+                        <img src="./image/chest_belly-2.png" class="chest_belly swiper-slide" alt="шея">
+                    </div>
+                </article>
+                <article class="swiper-container" style="margin-bottom: 116px;">
+                    <div class="swiper-wrapper">
+                        <img src="./image/legs-0.png" class="legs swiper-slide" alt="шея">
+                        <img src="./image/legs-1.png" class="legs swiper-slide" alt="шея">
+                        <img src="./image/legs-2.png" class="legs swiper-slide" alt="шея">
+                    </div>
+                </article>
             </article>
         </section>
     </main>
-
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
