Добавил новое платье

--- a/index.html
+++ b/index.html
@@ -16,31 +16,34 @@
     </header>
     <main>
         <section class="dresses">
-            <article class="dress">
-                <a class="open-model"></a>
+            <article class="dress Sonya">
+                <a id="open_Sonya" class="open-model"></a>
+            </article>
+            <article class="dress Lada">
+                <a id="open_Lada" class="open-model"></a>
             </article>
         </section>
         <section class="model">
             <article class="girl">
                 <article class="swiper-container" style="margin-top: 80px;">
                     <div class="swiper-wrapper">
-                        <img src="./image/neck-0.png" class="neck swiper-slide" alt="шея">
-                        <img src="./image/neck-1.png" class="neck swiper-slide" alt="шея">
-                        <img src="./image/neck-2.png" class="neck swiper-slide" alt="шея">
+                        <img id="neck-0" src="./image/neck-0.png" class="neck swiper-slide" alt="шея">
+                        <img id="neck-1" src="./image/neck-1.png" class="neck swiper-slide" alt="шея">
+                        <img id="neck-2" src="./image/neck-2.png" class="neck swiper-slide" alt="шея">
                     </div>
                 </article>
                 <article class="swiper-container">
                     <div class="swiper-wrapper">
-                        <img src="./image/chest_belly-0.png" class="chest_belly swiper-slide" alt="шея">
-                        <img src="./image/chest_belly-1.png" class="chest_belly swiper-slide" alt="шея">
-                        <img src="./image/chest_belly-2.png" class="chest_belly swiper-slide" alt="шея">
+                        <img id="chest_belly-0" src="./image/chest_belly-0.png" class="chest_belly swiper-slide" alt="шея">
+                        <img id="chest_belly-1" src="./image/chest_belly-1.png" class="chest_belly swiper-slide" alt="шея">
+                        <img id="chest_belly-2" src="./image/chest_belly-2.png" class="chest_belly swiper-slide" alt="шея">
                     </div>
                 </article>
                 <article class="swiper-container" style="margin-bottom: 116px;">
                     <div class="swiper-wrapper">
-                        <img src="./image/legs-0.png" class="legs swiper-slide" alt="шея">
-                        <img src="./image/legs-1.png" class="legs swiper-slide" alt="шея">
-                        <img src="./image/legs-2.png" class="legs swiper-slide" alt="шея">
+                        <img id="legs-0" src="./image/legs-0.png" class="legs swiper-slide" alt="шея">
+                        <img id="legs-1" src="./image/legs-1.png" class="legs swiper-slide" alt="шея">
+                        <img id="legs-2" src="./image/legs-2.png" class="legs swiper-slide" alt="шея">
                     </div>
                 </article>
             </article>
