Временная кнопка закрытия

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </article>
         </section>
         <section class="model">
+            <button class="model_close_button"></button>
             <article class="girl">
                 <article class="swiper-container" style="margin-top: 80px;">
                     <div class="swiper-wrapper">
