Криво, но добавил Сашино платье

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <article class="dress Lada">
                 <a id="open_Lada" class="open-model"></a>
             </article>
+            <article class="dress Sasha">
+                <a id="open_Sasha" class="open-model"></a>
+            </article>
         </section>
         <section class="model">
             <button class="model_close_button"></button>
@@ -35,16 +38,16 @@
                 </article>
                 <article class="swiper-container">
                     <div class="swiper-wrapper">
-                        <img id="chest_belly-0" src="./image/chest_belly-0.png" class="chest_belly swiper-slide" alt="шея">
-                        <img id="chest_belly-1" src="./image/chest_belly-1.png" class="chest_belly swiper-slide" alt="шея">
-                        <img id="chest_belly-2" src="./image/chest_belly-2.png" class="chest_belly swiper-slide" alt="шея">
+                        <img id="chest_belly-0" src="./image/chest_belly-0.png" class="chest_belly swiper-slide" alt="грудь и живот">
+                        <img id="chest_belly-1" src="./image/chest_belly-1.png" class="chest_belly swiper-slide" alt="грудь и живот">
+                        <img id="chest_belly-2" src="./image/chest_belly-2.png" class="chest_belly swiper-slide" alt="грудь и живот">
                     </div>
                 </article>
                 <article class="swiper-container" style="margin-bottom: 116px;">
                     <div class="swiper-wrapper">
-                        <img id="legs-0" src="./image/legs-0.png" class="legs swiper-slide" alt="шея">
-                        <img id="legs-1" src="./image/legs-1.png" class="legs swiper-slide" alt="шея">
-                        <img id="legs-2" src="./image/legs-2.png" class="legs swiper-slide" alt="шея">
+                        <img id="legs-0" src="./image/legs-0.png" class="legs swiper-slide" alt="ноги">
+                        <img id="legs-1" src="./image/legs-1.png" class="legs swiper-slide" alt="ноги">
+                        <img id="legs-2" src="./image/legs-2.png" class="legs swiper-slide" alt="ноги">
                     </div>
                 </article>
             </article>
