Фикс Сашиного платья. Ахуенно новое главное меню

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
     <main>
         <section class="dresses">
+            <img src="./image/Platiya.gif" class="livitation">
             <article class="dress Sonya">
                 <a id="open_Sonya" class="open-model"></a>
             </article>
