Заменил лого. Иправлен баг с отображаение кнопки закрытия на айфонах

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
     <header>
-        <h1 class="title">Соалла</h1>
-        <p class="version"></p>
+        <!-- <h1 class="title">Соалла</h1> -->
+        <!-- <p class="version"></p> -->
+        <img src="./image/soalla-heart.svg" class="header_img">
     </header>
     <main>
         <section class="dresses">
