--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                 </article>
             </article>
         </section>
+        <section class="contacts">
+            <h2 class="contacts__title">Наши контакты</h2>
+            <a href="https://vk.com/soallava">
+                <div class="contacts__vk"></div>
+            </a>
+        </section>
     </main>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </body>
